--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,19 +3,10 @@ image: docker:latest
 stages:
   - build
 
-services:
-  - docker:dind
-
-env:
-  - DIR=master
-  - DIR=master VARIANT=slim
-  - DIR=develop
-  - DIR=develop VARIANT=slim
-  - DIR=0.8.6
-  - DIR=0.8.6 VARIANT=slim
-
-build:
-  stage: build
+# Hidden key that defines an anchor named 'build'
+.job_template: &build
+  services:
+    - docker:dind
   before_script:
     - cd "$DIR"
     - eval $(awk '/VERSION=/ { sub(/@/, "-", $2); print $2; exit }' ${VARIANT:-.}/Dockerfile)
@@ -23,9 +14,51 @@ build:
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}"
   script:
     - docker build --pull -t "$image" "${VARIANT:-.}"
-  after_script:
-    - docker images
-  # only:
-  #   - tags
-  #   - master
-  #   - develop
+
+
+  # env:
+  # - DIR=master
+  # - DIR=master VARIANT=slim
+  # - DIR=develop
+  # - DIR=develop VARIANT=slim
+  # - DIR=0.8.6
+  # - DIR=0.8.6 VARIANT=slim
+
+develop:
+  stage: build
+  variables:
+    DIR: "develop"
+  <<: *build
+
+develop-slim:
+  stage: build
+  variables:
+    DIR: "develop"
+    VARIANT: "slim"
+  <<: *build
+
+master:
+  stage: build
+  variables:
+    DIR: "master"
+  <<: *build
+
+master-slim:
+  stage: build
+  variables:
+    DIR: "master"
+    VARIANT: "slim"
+  <<: *build
+
+"0.8.5":
+  stage: build
+  variables:
+    DIR: "master"
+  <<: *build
+
+"0.8.5-slim":
+  stage: build
+  variables:
+    DIR: "master"
+    VARIANT: "slim"
+  <<: *build
