--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,59 +8,51 @@ stages:
   services:
     - docker:dind
   before_script:
-    - cd "$DIR"
-    - eval $(awk '/VERSION=/ { sub(/@/, "-", $2); print $2; exit }' ${VARIANT:-.}/Dockerfile)
-    - image="bondy:${VERSION}${VARIANT:+-$VARIANT}"
-    - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}"
+    - echo "Building version=$BONDY_IMAGE_VERSION, variant=$BONDY_IMAGE_VARIANT"
+    - cd "$BONDY_IMAGE_VERSION"
+    - image="bondy:${BONDY_IMAGE_VERSION}${BONDY_IMAGE_VARIANT:+-$BONDY_IMAGE_VARIANT}"
+    # - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}"
   script:
+    # Build using $VARIANT/Dockerfile orelse ./Dockerfile
     - docker build --pull -t "$image" "${VARIANT:-.}"
   only:
     - master
 
-
-  # env:
-  # - DIR=master
-  # - DIR=master VARIANT=slim
-  # - DIR=develop
-  # - DIR=develop VARIANT=slim
-  # - DIR=0.8.6
-  # - DIR=0.8.6 VARIANT=slim
-
 develop:
   stage: build
   variables:
-    DIR: "develop"
+    BONDY_IMAGE_VERSION: "develop"
   <<: *build
 
 develop-slim:
   stage: build
   variables:
-    DIR: "develop"
-    VARIANT: "slim"
+    BONDY_IMAGE_VERSION: "develop"
+    BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
-master:
-  stage: build
-  variables:
-    DIR: "master"
-  <<: *build
+# master:
+#   stage: build
+#   variables:
+#     DIR: "master"
+#   <<: *build
 
-master-slim:
-  stage: build
-  variables:
-    DIR: "master"
-    VARIANT: "slim"
-  <<: *build
+# master-slim:
+#   stage: build
+#   variables:
+#     DIR: "master"
+#     VARIANT: "slim"
+#   <<: *build
 
-"0.8.5":
-  stage: build
-  variables:
-    DIR: "master"
-  <<: *build
+# "0.8.5":
+#   stage: build
+#   variables:
+#     DIR: "master"
+#   <<: *build
 
-"0.8.5-slim":
-  stage: build
-  variables:
-    DIR: "master"
-    VARIANT: "slim"
-  <<: *build
+# "0.8.5-slim":
+#   stage: build
+#   variables:
+#     DIR: "master"
+#     VARIANT: "slim"
+#   <<: *build
