--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,18 @@ stages:
     - docker:dind
   before_script:
     - echo "Building version=$BONDY_IMAGE_VERSION, variant=$BONDY_IMAGE_VARIANT"
-    - cd "$BONDY_IMAGE_VERSION"
+    # - cd "$BONDY_IMAGE_VERSION"
     - image="bondy:${BONDY_IMAGE_VERSION}${BONDY_IMAGE_VARIANT:+-$BONDY_IMAGE_VARIANT}"
     # - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}"
+    - rm -rf tmp
+    - mkdir tmp
+    - cp "${BONDY_IMAGE_VERSION}/${VARIANT:-.}/Dockerfile" tmp/Dockerfile
+    - cp start.sh tmp/start.sh
   script:
     # Build using $VARIANT/Dockerfile orelse ./Dockerfile
-    - docker build --pull -t "$image" "${VARIANT:-.}"
+    # - docker build --pull -t "$image" "${VARIANT:-.}"
+    - docker build --pull -t "$image" tmp
+
   only:
     - master
 
