--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,28 +40,28 @@ develop-slim:
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
-# master:
-#   stage: build
-#   variables:
-#     DIR: "master"
-#   <<: *build
+latest:
+  stage: build
+  variables:
+    DIR: "master"
+  <<: *build
 
-# master-slim:
-#   stage: build
-#   variables:
-#     DIR: "master"
-#     VARIANT: "slim"
-#   <<: *build
+latest-slim:
+  stage: build
+  variables:
+    DIR: "master"
+    VARIANT: "slim"
+  <<: *build
 
-# "0.8.5":
-#   stage: build
-#   variables:
-#     DIR: "master"
-#   <<: *build
+0.8.5:
+  stage: build
+  variables:
+    DIR: "0.8.5"
+  <<: *build
 
-# "0.8.5-slim":
-#   stage: build
-#   variables:
-#     DIR: "master"
-#     VARIANT: "slim"
-#   <<: *build
+0.8.5-slim:
+  stage: build
+  variables:
+    DIR: "0.8.5"
+    VARIANT: "slim"
+  <<: *build
