--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,25 +43,38 @@ develop-slim:
 latest:
   stage: build
   variables:
-    DIR: "master"
+    BONDY_IMAGE_VERSION: "master"
   <<: *build
 
 latest-slim:
   stage: build
   variables:
-    DIR: "master"
-    VARIANT: "slim"
+    BONDY_IMAGE_VERSION: "master"
+    BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
 0.8.5:
   stage: build
   variables:
-    DIR: "0.8.5"
+    BONDY_IMAGE_VERSION: "0.8.5"
   <<: *build
 
 0.8.5-slim:
   stage: build
   variables:
-    DIR: "0.8.5"
-    VARIANT: "slim"
+    BONDY_IMAGE_VERSION: "0.8.5"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
+
+0.8.6:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8.6"
+  <<: *build
+
+0.8.6-slim:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8.6"
+    BONDY_IMAGE_VARIANT: "slim"
   <<: *build
