--- a/examples/custom_config/Dockerfile
+++ b/examples/custom_config/Dockerfile
@@ -1,4 +1,4 @@
 FROM leapsight/bondy:develop AS builder
 
-COPY --chown=bondy:bondy etc/security_config.json.template /bondy/etc/security_config.json.template
-COPY --chown=bondy:bondy etc/bondy.conf.template /bondy/etc/bondy.conf.template
+COPY etc/security_config.json /bondy/etc/security_config.json.template
+COPY etc/bondy.conf /bondy/etc/bondy.conf.template
