--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,3 +78,16 @@ master-slim:
     BONDY_IMAGE_VERSION: "0.8.6"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
+
+0.8.7:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8.7"
+  <<: *build
+
+0.8.7-slim:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8.7"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
