--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,3 +91,16 @@ master-slim:
     BONDY_IMAGE_VERSION: "0.8.7"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
+
+0.8.8:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8.8"
+  <<: *build
+
+0.8.8-slim:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8.8"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
