--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,14 @@ stages:
   only:
     - master
 
+
+
+# ==============================================================================
+# DEVELOP
+# ==============================================================================
+
+
+
 develop:
   stage: build
   variables:
@@ -44,6 +52,14 @@ develop-slim:
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
+
+
+# ==============================================================================
+# MASTER
+# ==============================================================================
+
+
+
 master:
   stage: build
   variables:
@@ -58,6 +74,14 @@ master-slim:
     BONDY_TAG: "master"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
+
+
+
+# ==============================================================================
+# 0.8
+# ==============================================================================
+
+
 
 0.8.5:
   stage: build
@@ -133,3 +157,24 @@ master-slim:
     BONDY_TAG: "0.8.8.2"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
+
+0.8:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8"
+    BONDY_TAG: "0.8.8.2"
+  <<: *build
+
+0.8-slim:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8"
+    BONDY_TAG: "0.8.8.2"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
+
+
+
+# ==============================================================================
+# 0.9
+# ==============================================================================
