--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,38 +81,6 @@ master-slim:
 # 0.8
 # ==============================================================================
 
-
-
-0.8.5:
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.8"
-    BONDY_TAG: "0.8.5"
-  <<: *build
-
-0.8.5-slim:
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.8"
-    BONDY_TAG: "0.8.5"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
-
-0.8.6:
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.8"
-    BONDY_TAG: "0.8.6"
-  <<: *build
-
-0.8.6-slim:
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.8"
-    BONDY_TAG: "0.8.6"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
-
 0.8.7:
   stage: build
   variables:
@@ -180,7 +148,7 @@ master-slim:
     BONDY_TAG: "0.8.8.3"
   <<: *build
 
-0.8-slim:
+'0.8-slim':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "0.8"
@@ -188,6 +156,20 @@ master-slim:
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
+'0.9-SNAPSHOT':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "feature/aramallo.otp23"
+  <<: *build
+
+'0.9-SNAPSHOT-slim':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "feature/aramallo.otp23"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
 
 
 # ==============================================================================
