--- a/0.9-SNAPSHOT/slim/Dockerfile
+++ b/0.9-SNAPSHOT/slim/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /bondy-build
 
 # Install build deps
 RUN apt-get update && \
-    apt-get -y install build-essential git libssl-dev libsnappy-dev curl
+    apt-get -y install build-essential git libssl-dev libsodium-dev libsnappy-dev curl
 
 # Download and install build deps and rebar
 RUN set -xe \
