removed legacy os-env-var replacement script

--- a/0.9-SNAPSHOT/slim/Dockerfile
+++ b/0.9-SNAPSHOT/slim/Dockerfile
@@ -73,4 +73,4 @@ USER bondy
 ENV HOME "/bondy/data"
 VOLUME ["/bondy/data", "/bondy/etc", "/bondy/tmp", "/bondy/log"]
 WORKDIR $BONDY_HOME
-CMD ["start_bondy"]
+ENTRYPOINT ["bondy", "foreground"]
