--- a/0.9-SNAPSHOT/Dockerfile
+++ b/0.9-SNAPSHOT/Dockerfile
@@ -50,6 +50,7 @@ RUN apt-get update \
     && groupadd -g 1000 -r bondy \
     && useradd -u 1000 -r -g bondy -d $BONDY_HOME -s /bin/bash -c "Bondy user" bondy
 
+USER bondy
 WORKDIR $BONDY_HOME
 
 # Install the application and the start.sh script
@@ -69,9 +70,9 @@ ENV PATH="$BONDY_HOME/bin:$PATH"
 # 18086 CLUSTER PEER SERVICE
 EXPOSE 18080 18081 18082 18083 18084 18085 18086
 
-USER bondy
+
 # set home so that any `--user` knows where to put the erlang cookie
-ENV HOME "/bondy/data"
+ENV HOME "/bondy"
 VOLUME ["/bondy/data", "/bondy/etc", "/bondy/tmp", "/bondy/log"]
 WORKDIR $BONDY_HOME
 ENTRYPOINT ["bondy", "foreground"]
