--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,6 +156,11 @@ master-slim:
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
+# ==============================================================================
+# 0.9
+# ==============================================================================
+
+
 '0.9-SNAPSHOT':
   stage: build
   variables:
@@ -171,7 +176,19 @@ master-slim:
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
+'0.9-SNAPSHOT-SSO':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "release/0.9.0_SSO"
+  <<: *build
 
-# ==============================================================================
-# 0.9
-# ==============================================================================
+'0.9-SNAPSHOT-SSO-slim':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "release/0.9.0_SSO"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
+
+
