--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -165,14 +165,14 @@ master-slim:
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "release/0.9.0-SNAPSHOT"
+    BONDY_TAG: "0.9.0-SNAPSHOT"
   <<: *build
 
 '0.9-SNAPSHOT-slim':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "release/0.9.0-SNAPSHOT"
+    BONDY_TAG: "0.9.0-SNAPSHOT"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
