--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,4 +221,18 @@ master-slim:
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
+'1.0.0-beta.4':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "1.0.0-beta.4"
+  <<: *build
+
+'1.0.0-beta.4-slim':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "1.0.0-beta.4"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
 
