--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -236,3 +236,18 @@ master-slim:
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
 
+'1.0.0-beta.5':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "1.0.0-beta.5"
+  <<: *build
+
+'1.0.0-beta.5-slim':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+    BONDY_TAG: "1.0.0-beta.5"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
+
