--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,6 +126,21 @@ master-slim:
 #     BONDY_IMAGE_VARIANT: "slim"
 #   <<: *build
 
+0.8.8.4:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8"
+    BONDY_TAG: "0.8.8.4"
+  <<: *build
+
+0.8.8.4-slim:
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "0.8"
+    BONDY_TAG: "0.8.8.4"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
+
 # 0.8.8.2:
 #   stage: build
 #   variables:
