--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,20 +126,20 @@ master-slim:
 #     BONDY_IMAGE_VARIANT: "slim"
 #   <<: *build
 
-0.8.8.4:
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.8"
-    BONDY_TAG: "0.8.8.4"
-  <<: *build
+# 0.8.8.4:
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.8"
+#     BONDY_TAG: "0.8.8.4"
+#   <<: *build
 
-0.8.8.4-slim:
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.8"
-    BONDY_TAG: "0.8.8.4"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
+# 0.8.8.4-slim:
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.8"
+#     BONDY_TAG: "0.8.8.4"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
 
 # 0.8.8.2:
 #   stage: build
@@ -206,94 +206,107 @@ master-slim:
 #     BONDY_IMAGE_VARIANT: "slim"
 #   <<: *build
 
-'1.0.0-beta.1':
+# '1.0.0-beta.1':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.1"
+#   <<: *build
+
+# '1.0.0-beta.1-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.1"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+# '1.0.0-beta.3':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.3"
+#   <<: *build
+
+# '1.0.0-beta.3-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.3"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+# '1.0.0-beta.4':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.4"
+#   <<: *build
+
+# '1.0.0-beta.4-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.4"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+# '1.0.0-beta.6':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.6"
+#   <<: *build
+
+# '1.0.0-beta.6-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.6"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+# '1.0.0-beta.7':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.7"
+#   <<: *build
+
+# '1.0.0-beta.7-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.7"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+# '1.0.0-beta.8':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.8"
+#   <<: *build
+
+# '1.0.0-beta.8-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
+#     BONDY_TAG: "1.0.0-beta.8"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+'1.0.0-beta.9':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.1"
+    BONDY_TAG: "1.0.0-beta.9"
   <<: *build
 
-'1.0.0-beta.1-slim':
+'1.0.0-beta.9-slim':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.1"
+    BONDY_TAG: "1.0.0-beta.9"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
-
-'1.0.0-beta.3':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.3"
-  <<: *build
-
-'1.0.0-beta.3-slim':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.3"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
-
-'1.0.0-beta.4':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.4"
-  <<: *build
-
-'1.0.0-beta.4-slim':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.4"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
-
-'1.0.0-beta.6':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.6"
-  <<: *build
-
-'1.0.0-beta.6-slim':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.6"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
-
-
-'1.0.0-beta.7':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.7"
-  <<: *build
-
-'1.0.0-beta.7-slim':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.7"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
-
-'1.0.0-beta.8':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.8"
-  <<: *build
-
-'1.0.0-beta.8-slim':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "0.9-SNAPSHOT"
-    BONDY_TAG: "1.0.0-beta.8"
-    BONDY_IMAGE_VARIANT: "slim"
-  <<: *build
-
