added beta.10 based on Erlang 24

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -310,3 +310,18 @@ master-slim:
     BONDY_TAG: "1.0.0-beta.9"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
+
+'1.0.0-beta.10':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "1.0.0-beta"
+    BONDY_TAG: "1.0.0-beta.10"
+  <<: *build
+
+'1.0.0-beta.10-slim':
+  stage: build
+  variables:
+    BONDY_IMAGE_VERSION: "1.0.0-beta"
+    BONDY_TAG: "1.0.0-beta.10"
+    BONDY_IMAGE_VARIANT: "slim"
+  <<: *build
