--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -358,17 +358,32 @@ master-slim:
 #     BONDY_IMAGE_VARIANT: "slim"
 #   <<: *build
 
-'1.0.0-beta.13':
+# '1.0.0-beta.13':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "1.0.0-beta"
+#     BONDY_TAG: "1.0.0-beta.13"
+#   <<: *build
+
+# '1.0.0-beta.13-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "1.0.0-beta"
+#     BONDY_TAG: "1.0.0-beta.13"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+'1.0.0-beta.14':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "1.0.0-beta"
-    BONDY_TAG: "1.0.0-beta.13"
+    BONDY_TAG: "1.0.0-beta.14"
   <<: *build
 
-'1.0.0-beta.13-slim':
+'1.0.0-beta.14-slim':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "1.0.0-beta"
-    BONDY_TAG: "1.0.0-beta.13"
+    BONDY_TAG: "1.0.0-beta.14"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
