--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -373,17 +373,32 @@ master-slim:
 #     BONDY_IMAGE_VARIANT: "slim"
 #   <<: *build
 
-'1.0.0-beta.14':
+# '1.0.0-beta.14':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "1.0.0-beta"
+#     BONDY_TAG: "1.0.0-beta.14"
+#   <<: *build
+
+# '1.0.0-beta.14-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "1.0.0-beta"
+#     BONDY_TAG: "1.0.0-beta.14"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+'1.0.0-beta.15':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "1.0.0-beta"
-    BONDY_TAG: "1.0.0-beta.14"
+    BONDY_TAG: "1.0.0-beta.15"
   <<: *build
 
-'1.0.0-beta.14-slim':
+'1.0.0-beta.15-slim':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "1.0.0-beta"
-    BONDY_TAG: "1.0.0-beta.14"
+    BONDY_TAG: "1.0.0-beta.15"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
