--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -388,17 +388,32 @@ master-slim:
 #     BONDY_IMAGE_VARIANT: "slim"
 #   <<: *build
 
-'1.0.0-beta.15':
+# '1.0.0-beta.15':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "1.0.0-beta"
+#     BONDY_TAG: "1.0.0-beta.15"
+#   <<: *build
+
+# '1.0.0-beta.15-slim':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "1.0.0-beta"
+#     BONDY_TAG: "1.0.0-beta.15"
+#     BONDY_IMAGE_VARIANT: "slim"
+#   <<: *build
+
+'1.0.0-beta.16':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "1.0.0-beta"
-    BONDY_TAG: "1.0.0-beta.15"
+    BONDY_TAG: "1.0.0-beta.16"
   <<: *build
 
-'1.0.0-beta.15-slim':
+'1.0.0-beta.16-slim':
   stage: build
   variables:
     BONDY_IMAGE_VERSION: "1.0.0-beta"
-    BONDY_TAG: "1.0.0-beta.15"
+    BONDY_TAG: "1.0.0-beta.16"
     BONDY_IMAGE_VARIANT: "slim"
   <<: *build
