avoid rebuilding image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -435,9 +435,9 @@ master-slim:
   <<: *build
 
 
-'customer-temp-requirements-1.0.0-beta':
-  stage: build
-  variables:
-    BONDY_IMAGE_VERSION: "1.0.0-beta"
-    BONDY_TAG: "customer-temp-requirements-1.0.0-beta"
-  <<: *build
+# 'customer-temp-requirements-1.0.0-beta':
+#   stage: build
+#   variables:
+#     BONDY_IMAGE_VERSION: "1.0.0-beta"
+#     BONDY_TAG: "customer-temp-requirements-1.0.0-beta"
+#   <<: *build
