--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: jdrouet/docker-with-buildx:stable
+image: snickch/buildx:latest
 
 stages:
   - build
@@ -9,12 +9,12 @@ stages:
     - docker:dind
   before_script:
     - export DOCKER_BUILDKIT=1
-    - docker-buildx create --use
     - echo "CI_JOB_NAME = $CI_JOB_NAME"
     - BONDY_TAG="${BONDY_TAG:-BONDY_IMAGE_VERSION}"
     # Login to the Gitlab repo
     - echo "Logging in to registry $CI_REGISTRY"
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker-buildx create --use
     - echo "Building tag=$BONDY_TAG name=$CI_JOB_NAME version=$BONDY_IMAGE_VERSION, variant=$BONDY_IMAGE_VARIANT"
     # - image="leapsight/bondy:${BONDY_IMAGE_VERSION}${BONDY_IMAGE_VARIANT:+-$BONDY_IMAGE_VARIANT}"
     - image="leapsight/bondy:${CI_JOB_NAME}"
