--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,12 @@ stages:
     - docker:dind
   before_script:
     - export DOCKER_BUILDKIT=1
+    - docker buildx create --use
     - echo "CI_JOB_NAME = $CI_JOB_NAME"
     - BONDY_TAG="${BONDY_TAG:-BONDY_IMAGE_VERSION}"
     # Login to the Gitlab repo
     - echo "Logging in to registry $CI_REGISTRY"
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker-buildx create --use
     - echo "Building tag=$BONDY_TAG name=$CI_JOB_NAME version=$BONDY_IMAGE_VERSION, variant=$BONDY_IMAGE_VARIANT"
     # - image="leapsight/bondy:${BONDY_IMAGE_VERSION}${BONDY_IMAGE_VARIANT:+-$BONDY_IMAGE_VARIANT}"
     - image="leapsight/bondy:${CI_JOB_NAME}"
@@ -24,7 +24,7 @@ stages:
     - cp "${BONDY_IMAGE_VERSION}/${VARIANT:-.}/Dockerfile" tmp/Dockerfile
     - cp start.sh tmp/start.sh
   script:
-    - docker-buildx build
+    - docker buildx build
       --platform linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
       --build-arg BONDY_TAG=${BONDY_TAG} --pull -t "$image" tmp - docker push "$image"
 
