change base to see if we avoid qemu segfaults

--- a/1.0.0-beta/Dockerfile
+++ b/1.0.0-beta/Dockerfile
@@ -33,7 +33,7 @@ RUN rebar3 as prod release
 # Build stage 1
 # ===========================================================================
 
-FROM debian:buster
+FROM debian:bullseye
 
 ENV BONDY_HOME="/bondy"
 ENV RELEASE_DIR="/bondy-build/bondy/_build/prod/rel/bondy"
