explicitely add libc-bin

--- a/1.0.0-beta/Dockerfile
+++ b/1.0.0-beta/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /bondy-build
 
 # Install build deps
 RUN apt-get update && \
-    apt-get -y install build-essential git libssl-dev libsodium-dev libsnappy-dev curl
+    apt-get -y install libc-bin build-essential git libssl-dev libsodium-dev libsnappy-dev curl
 
 # Download and install build deps and rebar
 RUN set -xe \
